# Pico-Freertos-Pio

./: CMakeLists.txt  README.md
freertos/: FreeRTOSConfig.h
src/: CMakeLists.txt  ledcounter.pio  main.c  main.cpp
